fixed elements in mobile view to align better

--- a/styles/allEpisode.module.css
+++ b/styles/allEpisode.module.css
@@ -2,7 +2,7 @@
 
 @media only screen and (max-width: 768px) {
   .containerDiv {
-    padding-left: 130px;
+    padding-left: 15%;
   }
 }
 
