--- a/styles/blogs.module.css
+++ b/styles/blogs.module.css
@@ -6,5 +6,5 @@
 }
 
 .image {
-  width: 25em;
+  width: 20em;
 }
