--- a/styles/topEpisode.module.css
+++ b/styles/topEpisode.module.css
@@ -60,7 +60,7 @@
   .top5mobile {
     position: absolute;
     top: 150px;
-    left: 60px;
+    left: 10%;
     width: 80%;
     padding: 10px;
     border-radius: 10px;
